<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="hello">Hello World, main!</string>
    <string name="app_name">TouchCalculator</string>
    <string name="cur_pwd">현재 비밀번호</string>
    <string name="new_pwd">새로운 비밀번호</string>
    <string name="new_pwd_sub1">   영문,숫자 4~10자까지 사용(혼용가능)</string>
    <string name="confirm_pwd">비밀번호 확인</string>
    <string name="confirm_pwd_sub1">   재확인을 위해 입력한 비밀번호 다시 입력</string>
    <string name="editbox_text">비밀번호 입력</string>
    <string name="editbox_text1">비밀번호 재입력</string>
    <string name="pwd_info">입력하신 비밀번호는 암호화된 정보이므로 시스템에서 확인할 수 없습니다. 그러므로 암호 입력시 신중을 기해주시고 꼭 기억 해주세요.</string>
    <string name="yes">확인</string>
    <string name="cancel">취소</string>
    <string name="incorrectCurPwd">현재 패스워드가 틀립니다. 다시 입력해 주십시오.</string>
    
            
    <string-array name="menu">
    <item>수정</item>
    <item>삭제</item>
    <item>무음설정</item>
    <item>수신거부</item>
    <item>복원</item>
    </string-array>
    
</resources>
