<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:id="@+id/scrollView1"
	android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:text="@string/cur_pwd" android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginTop="20dp"></TextView>
		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/editCurPwd"
			android:inputType="textPassword">
			<requestFocus></requestFocus>
		</EditText>
		<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
			android:text="@string/new_pwd" android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginTop="20dp"></TextView>
		<TextView android:id="@+id/textView1" android:text="@string/new_pwd_sub1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/editNewPwd"
			android:inputType="textPassword"></EditText>
		<TextView android:id="@+id/TextView04" android:layout_width="wrap_content"
			android:text="@string/confirm_pwd" android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginTop="20dp"></TextView>
		<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
			android:text="@string/confirm_pwd_sub1" android:layout_height="wrap_content"></TextView>
		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/editConfirmNewPwd"
			android:inputType="textPassword"></EditText>
		<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
			android:text="@string/pwd_info" android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_marginTop="20dp"></TextView>
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/linearLayout1"
			android:layout_marginTop="10dp">
			<Button android:id="@+id/btnYes" android:layout_height="wrap_content"
				android:gravity="center_vertical|center_horizontal" android:text="@string/yes"
				android:layout_gravity="left" android:layout_width="145dp" android:textSize="15dp"></Button>
			<Button android:id="@+id/btnCancel" android:layout_height="wrap_content"
				android:text="@string/cancel" android:layout_gravity="right"
				android:gravity="center_vertical|center_horizontal"
				android:layout_width="145dp" android:textSize="15dp"></Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
